# DeepResarchSystem

./: .env  README.md  env.example  pyproject.toml
backend/: main.py
backend/agent/: agent.py  configuration.py  constant.py  graph.py  jsonUtils.py  llm.py  prompt.py  prompts.py  search_cache.py  state.py  tools_and_schemas.py  utils.py
backend/agent/sub_graph/: __init__.py  reasearch_graph.py  writer_graph.py
eval/: evaluator.py  hook_context.py  judge_prompts.py  judger.py
