[project]
name = "DeepResearchSystem"
version = "0.1.0"
description = "DeepResearchSystem"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "langgraph==1.1.6",
    "langchain>=1.2.15",
    "langchain-openai",
    "langgraph-sdk>=0.3.13",
    "langgraph-cli",
    "langgraph-api",
    "openai",
    "fastapi==0.115.9",
    "dashscope",
    "loguru",
    "jsonpath_ng",
    "python-dotenv>=1.0.1",
    "ipython>=9.15.0",
    "llm>=0.31.1",
]

# 可选组件
# mypy：类型检查
# ruff：py 代码格式化
[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

# 使用 setuptools作为构建后端。wheel的加入是为了生成二进制分发文件，加速安装。
[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# 代码格式化检查配置
[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

# 开发者本地环境：只包含调试（CLI）和验证（pytest）工具
[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.71",
    "pytest>=8.3.5",
]


# ===================== UV 核心配置（修复 Intel Mac + 镜像兼容问题/目前主要是 torch）=====================
# 强制指定当前环境：macOS 系统 + Intel(x86_64) 芯片，让 uv 只安装兼容的包
[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
# 允许跨多个镜像源查找包
index-strategy = "unsafe-best-match"
# 新增：延长下载超时时间（解决网络报错）
http-timeout = 120  # 秒
# 新增：失败自动重试
retry = true
retry-max-attempts = 5

# PyTorch 官方专用源
[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
name = "torch"

# 官方 PyPI 源（补充阿里云缺失的包，如新版 langchain-tavily）
[[tool.uv.index]]
url = "https://pypi.org/simple"
name = "pypi"

# ✅ 核心：只做工作区，不做可安装包（关键！）
#[tool.uv]
# 禁用 editable 安装，不触发 setuptools 构建
#editable = false


# ✅ 启用 Workspace，声明所有子项目目录（members）
#[tool.uv.workspace]
#members = [
#
#]
